Bug:white space at the footer of the wrapper bg

--- a/home.css
+++ b/home.css
@@ -1,8 +1,11 @@
+
 .bg-wrapper{
     background: url('./imgs/BBD-1.jpg');
     background-repeat:no-repeat;
     height: 1024px;
-
+    
+    
+    
 }
 
 .title{
@@ -15,4 +18,10 @@
     font-family:Sans-serif;
     font-size: 50px;
     font-weight: 600;
+}
+
+/* second division */
+.second{
+    background: #F5F5F5;
+    height: 600px;
 }
